# ferrlock

./: .gitignore  README.md  index.html  package.json
.claude/: settings.local.json
.github/scripts/: validate-release-version.ps1
.github/workflows/: ci.yml  release.yml
scripts/: build.ps1  tauri-signing.ps1  validate-signing-key.ps1
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  errors.rs  ifeo.rs  launcher.rs  lib.rs  main.rs  password.rs  tray.rs
src/components/: AppList.tsx  AppListItem.tsx  SettingsPanel.tsx
src/lib/: updater.ts
src/pages/: ManagementPage.tsx  PasswordPromptPage.tsx
