[package]
name = "ferrlock"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.55"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
